Fix Toggle label alignment

--- a/components/Toggle/Toggle.scss
+++ b/components/Toggle/Toggle.scss
@@ -10,7 +10,6 @@
     .label {
         display: flex;
 
-        align-items: center;
         cursor: pointer;
     }
 
